Rename room types broadcaster -> livestream, full_feature -> conference
